Fix Reality server and client metadata
